var searchData=
[
  ['tabu_5fsearch_5466',['TABU_SEARCH',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a6770ffaed7cb75bb4d8a29dfb1c4630b',1,'operations_research::PROTOBUF_FINAL']]],
  ['target_5fvar_5f_5467',['target_var_',['../classoperations__research_1_1_cast_constraint.html#a98fcd7d6529aa105a5d9ca4b282579f0',1,'operations_research::CastConstraint']]],
  ['time_5468',['time',['../structoperations__research_1_1_solution_collector_1_1_solution_data.html#a13421db7d7e84fff732599bcf954c5cc',1,'operations_research::SolutionCollector::SolutionData']]],
  ['tmp_5fvector_5f_5469',['tmp_vector_',['../classoperations__research_1_1_solver.html#a0f3d534acf3ba2602ae56ec4f28ccdd6',1,'operations_research::Solver']]],
  ['trailcompression_5farraysize_5470',['TrailCompression_ARRAYSIZE',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a7952e68a73131456455c9999406ecc01',1,'operations_research::PROTOBUF_FINAL']]],
  ['trailcompression_5fmax_5471',['TrailCompression_MAX',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#ada877cfa6ce0e361b258e6fe18172f9a',1,'operations_research::PROTOBUF_FINAL']]],
  ['trailcompression_5fmin_5472',['TrailCompression_MIN',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#ac1b27c473db980b4105262ce019dc37b',1,'operations_research::PROTOBUF_FINAL']]],
  ['transit_5473',['transit',['../structoperations__research_1_1_routing_model_1_1_state_dependent_transit.html#aa62eca1f13335c62c6eadad531f06247',1,'operations_research::RoutingModel::StateDependentTransit']]],
  ['transit_5fevaluator_5fclass_5474',['transit_evaluator_class',['../structoperations__research_1_1_routing_model_1_1_cost_class_1_1_dimension_cost.html#a251a1028d938f5eb8605f759e6dc966f',1,'operations_research::RoutingModel::CostClass::DimensionCost']]],
  ['transit_5fplus_5fidentity_5475',['transit_plus_identity',['../structoperations__research_1_1_routing_model_1_1_state_dependent_transit.html#ab71e287979b5c9040d1596d12ed3bb5f',1,'operations_research::RoutingModel::StateDependentTransit']]],
  ['transition_5ftime_5f_5476',['transition_time_',['../classoperations__research_1_1_disjunctive_constraint.html#afc37bcfd26805cab838cef7ae4c87444',1,'operations_research::DisjunctiveConstraint']]],
  ['type_5findex_5fof_5fvehicle_5477',['type_index_of_vehicle',['../structoperations__research_1_1_routing_model_1_1_vehicle_type_container.html#a9608c6da44ffbf91a3d1ca2c5d873bc7',1,'operations_research::RoutingModel::VehicleTypeContainer']]]
];
